--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "homepage": "http://remer.us/wla",
     "license": "MIT",
     "dependencies": {
-        "express": "~3.4"
+        "express": "~3.4",
+        "redis": "~0.9"
     }
 }
