--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "dependencies": {
         "express": "~3.4",
-        "redis": "~0.9"
+        "redis": "~0.9",
+        "connect-redis": "~1.4"
     }
 }
